--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,290 @@
+absl-py==1.3.0
 aiohttp==3.8.3
+aiohttp-socks==0.7.1
 aiosignal==1.3.1
+alembic==1.8.1
+anyio==3.6.2
+appdirs==1.4.4
+apt-clone==0.2.1
+apturl==0.5.2
+asgiref==3.5.2
 async-timeout==4.0.2
-attrs==22.1.0
-cffi==1.15.1
-charset-normalizer==2.1.1
-discord.py==2.1.0
+attrs==21.2.0
+awscli==1.22.34
+azure-ai-formrecognizer==3.2.0
+azure-common==1.1.28
+azure-core==1.26.0
+backoff==1.11.1
+beautifulsoup4==4.10.0
+black==22.6.0
+blessed==1.19.1
+blinker==1.4
+blis==0.7.9
+boto3==1.24.96
+botocore==1.27.96
+Brlapi==0.8.3
+bs4==0.0.1
+cachetools==5.2.0
+catalogue==2.0.8
+certifi==2022.12.7
+chardet==4.0.0
+charset-normalizer==2.0.6
+click==8.0.3
+cloudpickle==2.2.0
+colorama==0.4.4
+coloredlogs==10.0
+command-not-found==0.3
+confection==0.0.3
+configobj==5.0.6
+construct==2.5.3
+cryptography==3.4.8
+cssselect==1.2.0
+cupshelpers==1.0
+cymem==2.0.7
+databricks-cli==0.17.3
+dbus-python==1.2.18
+defer==1.0.6
+defusedxml==0.7.1
+dill==0.3.6
 disnake==2.7.0
+distro==1.7.0
+Django==4.1.3
+dnspython==2.2.1
+docker==5.0.3
+docker-compose==1.29.2
+dockerpty==0.4.1
+docopt==0.6.2
+docutils==0.17.1
+elasticsearch==7.17.7
+email-validator==1.3.0
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.1/en_core_web_sm-3.4.1-py3-none-any.whl
+entrypoints==0.4
+et-xmlfile==1.1.0
+evdev==1.4.0
+eyeD3==0.8.10
+faiss-cpu==1.7.2
+fake-useragent==1.1.1
+farm-haystack==1.10.0
+fastapi==0.87.0
+filelock==3.6.0
+fire==0.4.0
+Flask==2.2.2
 frozenlist==1.3.3
-idna==3.4
-multidict==6.0.3
-pycparser==2.21
+fsspec==2022.11.0
+future==0.18.2
+gitdb==4.0.9
+GitPython==3.1.29
+google-api-core==2.11.0
+google-api-python-client==2.69.0
+google-auth==2.15.0
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.8.0
+googleapis-common-protos==1.57.0
+gpustat==1.0.0
+greenlet==1.1.2
+grpcio==1.30.2
+gunicorn==20.1.0
+gyp==0.1
+h11==0.14.0
+haystack==0.42
+html5lib==1.1
+httpcore==0.16.1
+httpie==2.6.0
+httplib2==0.20.2
+httptools==0.5.0
+httpx==0.23.1
+huggingface-hub==0.10.1
+humanfriendly==10.0
+idna==3.3
+ifaddr==0.1.7
+IMDbPY==2021.4.18
+importlib-metadata==4.6.4
+inflect==6.0.2
+iniconfig==1.1.1
+isodate==0.6.1
+itsdangerous==2.1.2
+jarowinkler==1.2.3
+jeepney==0.7.1
+Jinja2==3.1.2
+jmespath==0.10.0
+joblib==1.2.0
+jsonschema==3.2.0
+keyring==23.5.0
+langcodes==3.3.0
+langdetect==1.0.9
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+Levenshtein==0.20.8
+lightning-utilities==0.3.0
+louis==3.20.0
+lxml==4.8.0
+macaroonbakery==1.3.1
+Mako==1.1.3
+mando==0.6.4
+Markdown==3.4.1
+MarkupSafe==2.1.1
+mlflow==1.30.0
+mmh3==3.0.0
+monotonic==1.6
+more-itertools==8.10.0
+msgpack==1.0.3
+msrest==0.7.1
+multidict==6.0.2
+murmurhash==1.0.9
+mypy-extensions==0.4.3
+nemo-emblems==5.4.1
+netaddr==0.8.0
+netifaces==0.11.0
+networkx==2.8.7
+nltk==3.7
+num2words==0.5.12
+numpy==1.23.4
+nvidia-ml-py==11.495.46
+oauth2client==4.1.3
+oauthlib==3.2.0
+onboard==1.4.1
+openpyxl==3.0.10
+orjson==3.8.2
+packaging==21.3
+PAM==0.4.2
+pandas==1.5.1
+parse==1.19.0
+pathspec==0.10.1
+pathy==0.6.2
+pefile==2022.5.30
+pexpect==4.8.0
+Pillow==9.0.1
+platformdirs==2.5.2
+pluggy==1.0.0
+posthog==2.1.2
+preshed==3.0.8
+prometheus-client==0.15.0
+prometheus-flask-exporter==0.20.3
+protobuf==4.21.11
+psutil==5.9.0
+psycopg2-binary==2.9.5
+ptyprocess==0.7.0
+py==1.11.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycairo==1.20.1
+pycups==2.0.1
+pycurl==7.44.1
+pydantic==1.10.2
+pyee==8.2.2
+pyelftools==0.27
+Pygments==2.11.2
+PyGObject==3.42.1
+PyICU==2.8.1
+pyinotify==0.9.6
+PyJWT==2.3.0
+pymacaroons==0.13.0
 PyNaCl==1.5.0
-python-dotenv==0.21.0
-yarl==1.8.2
+pynvim==0.4.2
+pyparsing==2.4.7
+pyparted==3.11.7
+pyppeteer==1.0.2
+pyquery==1.4.3
+pyRFC3339==1.1
+pyrsistent==0.18.1
+PySocks==1.7.1
+pytest==7.1.3
+python-apt==2.3.0+ubuntu2.1
+python-dateutil==2.8.1
+python-debian===0.1.43ubuntu1
+python-docx==0.8.11
+python-dotenv==0.19.2
+python-magic==0.4.24
+python-multipart==0.0.5
+python-ptrace==0.9.8
+python-socks==2.1.1
+python-xapp==2.2.2
+python-xlib==0.29
+pytorch-lightning==1.8.2
+pytz==2022.1
+pyxdg==0.27
+PyYAML==6.0
+quantulum3==0.7.11
+querystring-parser==1.2.4
+radon==5.1.0
+rapidfuzz==2.7.0
+regex==2022.10.31
+reportlab==3.6.8
+requests==2.25.1
+requests-file==1.5.1
+requests-html==0.10.0
+requests-oauthlib==1.3.1
+requests-toolbelt==0.9.1
+rfc3986==1.5.0
+roman==3.3
+rsa==4.8
+s3transfer==0.6.0
+scikit-learn==1.1.3
+scipy==1.9.3
+screen-resolution-extra==0.0.0
+SecretStorage==3.3.1
+sentence-transformers==2.2.2
+sentencepiece==0.1.97
+seqeval==1.2.2
+setproctitle==1.2.2
+six==1.16.0
+smart-open==5.2.1
+smmap==5.0.0
+sniffio==1.3.0
+soupsieve==2.3.1
+spacy==3.4.2
+spacy-legacy==3.0.10
+spacy-loggers==1.0.3
+SQLAlchemy==1.4.42
+SQLAlchemy-Utils==0.38.3
+sqlparse==0.4.3
+srsly==2.4.5
+starlette==0.21.0
+systemd-python==234
+tabulate==0.9.0
+tensorboard==2.11.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+termcolor==2.1.1
+texttable==1.6.4
+thinc==8.1.5
+threadpoolctl==3.1.0
+tiendada-flash==0.0.1
+tika==1.24
+tinycss2==1.1.1
+tldextract==3.1.2
+tokenizers==0.12.1
+tomli==2.0.1
+torch==1.12.1
+torchmetrics==0.10.3
+torchvision==0.13.1
+tqdm==4.64.1
+transformers==4.21.2
+typer==0.4.2
+typing_extensions==4.4.0
+ubuntu-drivers-common==0.0.0
+ufw==0.36.1
+ujson==5.5.0
+Unidecode==1.3.3
+uritemplate==4.1.1
+urlbuster==0.5.1
+urllib3==1.26.5
+uvicorn==0.20.0
+uvloop==0.17.0
+w3lib==2.1.1
+wadllib==1.3.6
+wasabi==0.10.1
+watchfiles==0.18.1
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.2.3
+websockets==10.4
+Werkzeug==2.2.2
+xdg==5
+xkit==0.0.0
+xlrd==1.2.0
+yarl==1.8.1
 youtube-dl==2021.12.17
+youtube-search-python==1.6.6
+zipp==1.0.0
