--- a/requirements.txt
+++ b/requirements.txt
@@ -17,8 +17,10 @@ multidict==6.0.3
 pycparser==2.21
 PyNaCl==1.5.0
 python-dotenv==0.21.0
+requests==2.28.1
 rfc3986==1.5.0
 sniffio==1.3.0
+urllib3==1.26.13
 yarl==1.8.2
 youtube-dl==2021.12.17
-youtube-search-python==1.6.6
+youtube-search==2.1.2
