--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,27 @@
-aiohttp==3.8.3
+aiohttp==3.8.5
 aiosignal==1.3.1
-anyio==3.6.2
+anyio==3.7.1
 async-timeout==4.0.2
-attrs==22.2.0
-certifi==2022.12.7
+attrs==23.1.0
+Brotli==1.0.9
+certifi==2023.7.22
 cffi==1.15.1
-charset-normalizer==2.1.1
-discord.py==2.1.0
-disnake==2.7.0
-frozenlist==1.3.3
+charset-normalizer==3.2.0
+disnake==2.9.0
+exceptiongroup==1.1.2
+frozenlist==1.4.0
 h11==0.14.0
-httpcore==0.16.3
-httpx==0.23.1
+httpcore==0.17.3
+httpx==0.24.1
 idna==3.4
-multidict==6.0.3
+multidict==6.0.4
+mutagen==1.46.0
 pycparser==2.21
+pycryptodomex==3.18.0
 PyNaCl==1.5.0
-python-dotenv==0.21.0
-requests==2.28.1
-rfc3986==1.5.0
+python-dotenv==1.0.0
 sniffio==1.3.0
-urllib3==1.26.13
-yarl==1.8.2
-youtube-dl==2021.12.17
+websockets==11.0.3
+yarl==1.9.2
 youtube-search-python==1.6.6
+yt-dlp==2023.7.6
